2005-07-04  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-lib.el:
	(vlog-lib-make-regexp): Use shy group and call `vlog-regexp-opt'
	with nil.

	* vlog-auto.el:
	(vlog-auto-parse-values-in-region): Regexp fix to match one-char
	signals inside parens.

2005-05-10  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-lib.el:
	(vlog-lib-make-regexp): Place regexp between '\<' and '\>'.

2005-03-18  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-mode.el:
	(vlog-mode-electric-space): Add "endmodule" automaticlly after
	typing "module" and a space (auto-endmodule); Also auto-endcase;
	Doc fix.
	(vlog-mode-auto-end-module): New customizable variable. Default
	value is t.
	(vlog-mode-double-comma-prefix), (vlog-mode-double-comma-suffix):
	New customizable variable. Each default value is nil.
	(vlog-mode-electric-comma): Use prefix and suffix above.

2005-03-16  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-mode.el:
	(vlog-mode-electric-space): Do not expand width string with
	`parameter' keyword.

	* vlog-indent.el:
	(vlog-indent-check-for-newline): Skip back begin...end and
	fork...join blocks.
	(vlog-indent-goto-match-if): Doc typo fix; Fix the bug that
	confuses `end' and `endcase'.

2005-03-11  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-lib.el:
	(vlog-jump-out-useless-backward): Fix a bug when there are
	multiple double-slashes ("//") in a single line.

2005-03-03  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-lib.el:
	(vlog-lib-get-module-name): New function.

	* vlog-mode.el:
	(vlog-mode-auto-name-at-endmodule): New customizable
	variable. Default value is t.
	(vlog-mode-endmodule-auto-name-prefix): New customizable variable.
	(vlog-mode-electric-return): Automatically add module name after
	endmodule.  Some doc fixes too.

2005-03-02  Sun Yijiang  <sunyijiang@gmail.com>
	* vlog-indent.el:
	(vlog-indent-check-for-newline): Bug fix & Doc fix. Search back
	`vlog-indent-words-re' conditionally. `vlog-indent-goto-block-beg'